--- a/homework3.Rmd
+++ b/homework3.Rmd
@@ -10,6 +10,7 @@ library(p8105.datasets)
 library(tidyverse)
 library(tidyr)
 library(ggridges)
+library(patchwork)
 ```
 
 ## Problem1
@@ -19,6 +20,7 @@ data("ny_noaa")
 ```
 
 Answer to the questions.
+1. Data Cleaning and Exploring the Snowfall Data
 First, we separate variables for year, month, and day in the dataset. Besides, noticing the tmax and tmin are chr in the table, we will convert the temperature into the numeric. Also, according to the description of the dataset, temperature and precipitation are in tenths of degrees C and mm separately. So, we also need to convert the unit for these two variables. The unit of snowfall is already in mm.
 
 ```{r clean data}
@@ -45,9 +47,9 @@ print(head(snowfall_counts, 10))
 
 ```
 
-Two-Panel Plot: Average Max Temperature in January and July. We first calculate the average max temperature by grouping the date and filtering the months from 12 months to Jan and July. 
+2. Two-Panel Plot: Average Max Temperature in January and July. We first calculate the average max temperature by grouping the date and filtering the months from 12 months to Jan and July. 
 
-The plot shows the average maximum temperature in January and July across several weather stations in New York, with trends for each station shown across the years. These months represent two extreme seasons: Winter (cold) and Summer (hot). Temperatures in Jan is be much lower compared to July. There are some individual points(outliners) in the both panel that show unusual temperatures, which might indicate data entry errors or unusual weather patterns.
+The plot shows the average maximum temperature in January and July across several weather stations in New York, with trends for each station shown across the years. These months represent two extreme seasons: Winter (cold) and Summer (hot). Temperatures in Jan is be much lower compared to July. All stations in NY seems to have similar temperature pattern in Jan/July in one specific year. There are some individual points(outliners) in the both panel that show unusual temperatures, which might indicate data entry errors or unusual weather patterns. 
 
 ```{r}
 temp_summary = ny_noaa_clean |>
@@ -75,6 +77,44 @@ temp_summary |>
 
 ```
 
+3. Two-Panel Plot: (i) Hex plot for tmax vs tmin and (ii) ridge plot for the distribution of snowfall
+
+From the hexplot, we can find that there is a positive correlation between tmax and tmin since warmer days tend to have both higher minimum and maximum temperatures.
+
+From the ridge plot, we will see that in most of all years
+```{r ,warning=FALSE}
+tmax_tmin_plot = 
+  ny_noaa_clean |>
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_hex(bins = 50) +
+  labs(
+    title = "tmax vs tmin",
+    x = "Minimum Temperature (°C)", 
+    y = "Maximum Temperature (°C)"
+  ) +
+  theme_minimal() +
+    theme(legend.position = "bottom",
+          legend.text = element_text(size=5),
+          plot.title = element_text(hjust = 0.5))
+
+snowfall_plot = 
+  ny_noaa_clean |>
+  filter(snow > 0 & snow < 100, !is.na(snow)) |>
+  ggplot(aes(x = snow, y = factor(year))) +
+  geom_density_ridges(scale = 1.2, rel_min_height = 0.01) +  # Ridge plot
+  scale_fill_viridis_c(option = "C") +  # Color based on snowfall amount
+  labs(
+    title = "Distribution of Snowfall (0-100 mm) by Year",
+    x = "Snowfall (mm)", y = "Year"
+  ) +
+  theme_minimal() +
+  theme(
+    legend.position = "none",  # Hide legend to reduce clutter
+    axis.text.y = element_text(size = 8)  # Adjust y-axis text size for readability
+  )
+
+print(tmax_tmin_plot + snowfall_plot)
+```
 
 
 
