Problem2 load and clean the data

--- a/homework3.Rmd
+++ b/homework3.Rmd
@@ -101,20 +101,80 @@ snowfall_plot =
   ny_noaa_clean |>
   filter(snow > 0 & snow < 100, !is.na(snow)) |>
   ggplot(aes(x = snow, y = factor(year))) +
-  geom_density_ridges(scale = 1.2, rel_min_height = 0.01) +  # Ridge plot
-  scale_fill_viridis_c(option = "C") +  # Color based on snowfall amount
+  geom_density_ridges(scale = 1.2, rel_min_height = 0.01) +  
+  scale_fill_viridis_c(option = "C") +  
   labs(
     title = "Distribution of Snowfall (0-100 mm) by Year",
     x = "Snowfall (mm)", y = "Year"
   ) +
   theme_minimal() +
   theme(
-    legend.position = "none",  # Hide legend to reduce clutter
-    axis.text.y = element_text(size = 8)  # Adjust y-axis text size for readability
+    legend.position = "none",  
+    axis.text.y = element_text(size = 8)  
   )
 
 print(tmax_tmin_plot + snowfall_plot)
 ```
 
 
+## Problem2
 
+Load the dataset.
+Skip some rows in the beginning of nhanes_covar.csv to read the correct data.
+```{r}
+accel_data = read_csv("./data/nhanes_accel.csv") |>
+  janitor::clean_names()  
+
+demographic_data = read_csv("./data/nhanes_covar.csv",skip = 4) |>
+  janitor::clean_names()
+```
+
+Cleaning the data.
+We exclude participants under 21 and those with missing demographic data. Then, encoding sex as factor (originally double) and re-coding the education level.
+```{r}
+demographic_data_clean =
+  demographic_data |>
+  filter(age >= 21, !is.na(sex), !is.na(education)) |>
+  mutate(
+    sex = 
+      case_match(
+        sex, 
+        1 ~ "male", 
+        2 ~ "female"),
+    education =
+      case_match(
+        education,
+        1 ~ "Less than high school",
+        2 ~ "High school equivalent",
+        3 ~ "More than high school"
+      ),
+    sex = as.factor(sex),
+    education = as.factor(education)
+  )
+```
+
+We merge Accelerometer Data and Demographic Data by participants id. And then create a table of men and female by education level. Finally, we visualize age distributions by sex and education level.
+
+```{r}
+merged_data = demographic_data_clean |>
+  inner_join(accel_data, by = "seqn")
+
+education_table = merged_data |>
+  group_by(education, sex) |>
+  summarize(count = n(), .groups = "drop") |>
+  pivot_wider(names_from = sex, values_from = count, values_fill = 0)
+print(education_table)
+
+merged_data |>
+  ggplot(aes(x = age, fill = sex)) +
+  geom_density(alpha = 0.5) +
+  facet_wrap(~education, ncol = 2) +
+  labs(
+    title = "Age Distribution by Sex and Education Level",
+    x = "Age", y = "Density"
+  ) +
+  theme_minimal() +
+   theme(legend.position = "bottom",
+        plot.title = element_text(hjust = 0.5))
+
+```
