--- a/homework3.Rmd
+++ b/homework3.Rmd
@@ -30,6 +30,7 @@ data("ny_noaa")
 Answer to the questions.
 
 1. Data Cleaning and Exploring the Snowfall Data
+
 First, we separate variables for year, month, and day in the dataset. Besides, noticing the tmax and tmin are chr in the table, we will convert the temperature into the numeric. Also, according to the description of the dataset, temperature and precipitation are in tenths of degrees C and mm separately. So, we also need to convert the unit for these two variables. The unit of snowfall is already in mm.
 
 ```{r clean data}
@@ -260,7 +261,7 @@ ggplot(hourly_activity, aes(x = time_min, y = mean_mims, color = sex)) +
 
 ## Problem 3
 
-Load the data.
+3.1 We first load the data first and combine the four datasets with year and month labeled. Then, we recode the varibale type of some columns.
 ```{r load adat in problem3}
 jan_2020 = read_csv("./data/citibike/Jan 2020 Citi.csv") |>
   janitor::clean_names() |>
@@ -280,8 +281,98 @@ july_2024 = read_csv("./data/citibike/July 2024 Citi.csv") |>
 
 citibike_data = 
   bind_rows(jan_2020, july_2020, jan_2024, july_2024) |>
-  separate(year_month, into = c('year','month'), sep = '-')
+  separate(year_month, into = c('year','month'), sep = '-') |>
+  mutate(
+    year = as.numeric(year),
+    month = as.numeric(month),
+    month = 
+      case_match(
+        month, 
+        1 ~ "Jan", 
+        7 ~ "July"),
+    rideable_type = factor(rideable_type),
+    member_casual = factor(member_casual)
+  ) 
+```
+
+
+3.2 Create a table of total rides by year, month, and membership type.
+
+The table provides counts of Citi Bike rides grouped by year, month, and membership type (casual vs. member). Here is the comment on the table:
+
+- Rides peak in July (summer) and drop in January (winter).
+- Members consistently take more rides than casual users.
+- Both member and casual usage increased significantly between 2020 and 2024.
+- Casual usage grows more in July, reflecting increased tourism and outdoor activities in summer.
+
+This analysis highlights the importance of seasonality and membership programs in Citi Bike's operations and suggests that service improvements have driven growth in ridership over the years.
+```{r}
+rides_table = 
+  citibike_data |>
+  group_by(year, month, member_casual) |>
+  summarize(total_rides = n(), .groups = "drop") |>
+  pivot_wider(names_from = member_casual, values_from = total_rides, values_fill = 0)
+
+print(rides_table)
+```
+
+
+3.3 Filter data for July 2024 and count rides by starting station.
+
+This table shows the five most popular starting stations in the Citi Bike system for July 2024, along with the total number of rides originating from each station.
+
+```{r}
+top_stations = citibike_data |>
+  filter(year == 2024, month == "July") |>
+  group_by(start_station_name) |>
+  summarize(total_rides = n(), .groups = "drop") |>
+  arrange(desc(total_rides)) |>
+  slice_head(n = 5)
+
+print(top_stations)
 
 ```
 
+3.4 Plot the Effect of Day, Month, and Year on Median Ride Duration.
+
+We calculate median ride duration by day of week, month, and year. This plot shows how median ride duration (in minutes) varies by day of the week, with separate panels for January and July. The color scale at the bottom reflects different years (from 2020 to 2024). Here's the comment on the plot:
+
+
+```{r}
+ride_duration_stats = citibike_data |>
+  group_by(year, month, weekdays) |>
+  summarize(median_duration = median(duration, na.rm = TRUE), .groups = "drop")
+
+ggplot(ride_duration_stats, aes(x = weekdays, y = median_duration, color = year)) +
+  geom_point() +
+  geom_line(aes(group = interaction(year, month))) +
+  facet_wrap(~month, ncol = 2) +
+  labs(
+    title = "Effect of Day, Month, and Year on Median Ride Duration",
+    x = "Day of the Week", y = "Median Ride Duration (Minutes)"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "bottom",
+        plot.title = element_text(hjust = 0.5),
+        axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+3.5 Investigate the Impact of Month, Membership, and Bike Type on Ride Duration in 2024.
+Filter data for 2024 and create a plot of ride duration distributions
+
+```{r}
+# Filter data for 2024 and create a plot of ride duration distributions
+ggplot(citibike_data %>% filter(year == 2024), 
+       aes(x = duration, fill = member_casual)) +
+  geom_histogram(bins = 50, position = "identity", alpha = 0.6) +
+  facet_grid(rideable_type ~ month) +
+  labs(
+    title = "Distribution of Ride Duration by Month, Membership, and Bike Type (2024)",
+    x = "Ride Duration (Minutes)", y = "Count"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "bottom",
+        plot.title = element_text(hjust = 0.5))
+
+```
 
